test/error/sema/invalid-number-of-args.dsk
func add(a: int, b: int) -> int
    return a + b
end

echo(add(1, 2, 3))

echo(add(1))
